--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,16 @@
 chardet==3.0.4
+cycler==0.10.0
 future==0.16.0
 gym==0.10.5
 idna==2.6
+kiwisolver==1.0.1
+matplotlib==2.2.2
 numpy==1.14.3
 pygame==1.9.3
 pyglet==1.3.2
+pyparsing==2.2.0
+python-dateutil==2.7.3
+pytz==2018.4
 requests==2.18.4
 six==1.11.0
 urllib3==1.22
